# minimax-acp-agent

./: README.md  launcher.sh  pyproject.toml
src/: agent.py
